src/main/java/com/example/pairprogramming/user/error/InvalidTokenException.java
package com.example.pairprogramming.user.error;

public class InvalidTokenException extends RuntimeException{
}
